multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exe-pod
spec:
  containers:
    - name: fitness-tracker
      image: angira9/fitness-tracker:latest
      ports:
        - containerPort: 3000
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
