deployment-fitness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-deploy
  labels:
    app: fitness
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fitness
  template:
    metadata:
      labels:
        app: fitness
    spec:
      containers:
        - name: fitness-tracker
          image: angira9/fitness-tracker:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fitness-service
spec:
  selector:
    app: fitness
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
