http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route
  namespace: default
  labels:
    app: fitness-tracker
spec:
  parentRefs:
    - name: fitness-gateway
  rules:
    # FITNESS TRACKER UI
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fitness-service
          port: 80
